--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ArtemiusL/webpack4__study#readme",
   "devDependencies": {
+    "error-overlay-webpack-plugin": "^0.1.5",
     "path": "^0.12.7",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
