--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/ArtemiusL/webpack4__study#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "7",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
     "error-overlay-webpack-plugin": "^0.1.5",
     "path": "^0.12.7",
     "webpack": "^4.26.1",
