--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "babel-loader": "7",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
+    "css-loader": "^1.0.1",
     "error-overlay-webpack-plugin": "^0.1.5",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "path": "^0.12.7",
+    "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
